# service

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  schema.graphql  submission.graphql
.github/workflows/: deploy.yaml  push.yml
.jobs/archive/: Dockerfile  job.py  requirements.txt
.jobs/csv/: job.py
.jobs/csv/config/: sln.csv
helm/: Chart.yaml  values.yaml
helm/files/: init.sh  init.sql  urls.txt
helm/templates/: namespace.yaml  service.yaml
helm/templates/archive-job/: configmap.yaml  cronjob.yaml
helm/templates/csv-job/: configmap.yaml  cronjob.yaml
helm/templates/db/: configmap.yaml  service.yaml  statefulset.yaml
helm/templates/main/: deployment.yaml  ingress.yaml
helm/templates/redis/: service.yaml  statefulset.yaml
helm/templates/s3/: configmap.yaml  ingress.yaml  job.yaml  service.yaml  statefulset.yaml
helm/templates/web/: deployment.yaml  service.yaml
jobs/archive/: Dockerfile  pyproject.toml
jobs/csv/: Dockerfile  job.py  main.py  pyproject.toml
lib/: __init__.py  api.py  auth.py  driver.py  s3.py  schema.py  solution.py  submission.py  submissions.py
lib/net/: __init__.py  _transport.py
lib/refs/: __init__.py  _db.py
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: api.ts
ui/src/routes/: Dashboard.tsx
web/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts
web/src/routes/: Dashboard.tsx  Login.tsx
