[project]
name = "service"
version = "0.1.0"
description = "Cyberaccounting Backend Service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "authlib[starlette]>=1.7.2",
    "httpx>=0.28.1",
    "litestar>=2.24.0",
    "minio>=7.2.20",
    "psycopg[binary]>=3.3.4",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
    "starlette>=1.3.1",
    "strawberry-graphql>=0.316.0",
    "uvicorn>=0.49.0",
]

[tool.uv.workspace]
members = [
    "jobs/csv",
    "jobs/archive",
]
